--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="lc_java"/>
 	<classpathentry kind="lib" path="C:/Users/ASUS/eclipse-workspace/commons-lang3-3.11/commons-lang3-3.11.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ASUS/eclipse-workspace/commons-lang3-3.11/commons-lang3-3.11-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ASUS/eclipse-workspace/commons-lang3-3.11/commons-lang3-3.11-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ASUS/eclipse-workspace/commons-lang3-3.11/commons-lang3-3.11-tests.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ASUS/eclipse-workspace/commons-lang3-3.11/commons-lang3-3.11-test-sources.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-14.0.2">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
